// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: none;
  width: auto;
  line-height: 1.2;
  border-radius: 0.375rem;
  font-weight: 600;
  height: 2.5rem;
  min-width: 2.5rem;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  background: #EDF2F7;
}

.emotion-0:focus,
.emotion-0[data-focus] {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.emotion-0[disabled],
.emotion-0[disabled]:focus,
.emotion-0[disabled]:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled],
.emotion-0[data-disabled]:focus,
.emotion-0[data-disabled]:hover {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: none;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background: #E2E8F0;
}

.emotion-0:hover[disabled],
.emotion-0[data-hover][disabled],
.emotion-0:hover[disabled]:focus,
.emotion-0[data-hover][disabled]:focus,
.emotion-0:hover[disabled]:hover,
.emotion-0[data-hover][disabled]:hover,
.emotion-0:hover[aria-disabled=true],
.emotion-0[data-hover][aria-disabled=true],
.emotion-0:hover[aria-disabled=true]:focus,
.emotion-0[data-hover][aria-disabled=true]:focus,
.emotion-0:hover[aria-disabled=true]:hover,
.emotion-0[data-hover][aria-disabled=true]:hover,
.emotion-0:hover[data-disabled],
.emotion-0[data-hover][data-disabled],
.emotion-0:hover[data-disabled]:focus,
.emotion-0[data-hover][data-disabled]:focus,
.emotion-0:hover[data-disabled]:hover,
.emotion-0[data-hover][data-disabled]:hover {
  background: #EDF2F7;
}

.emotion-0:active,
.emotion-0[data-active] {
  background: #CBD5E0;
}

<button
    class="chakra-button emotion-0"
    type="button"
  >
    test
  </button>
</DocumentFragment>
`;

exports[`matches snapshot with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0>*:not(style)~*:not(style) {
  margin-left: 0.5rem;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: none;
  width: auto;
  line-height: 1.2;
  border-radius: 0.375rem;
  font-weight: 600;
  height: 2.5rem;
  min-width: 2.5rem;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  background: #EDF2F7;
}

.emotion-1:focus,
.emotion-1[data-focus] {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
  z-index: 1;
}

.emotion-1[disabled],
.emotion-1[disabled]:focus,
.emotion-1[disabled]:hover,
.emotion-1[aria-disabled=true],
.emotion-1[aria-disabled=true]:focus,
.emotion-1[aria-disabled=true]:hover,
.emotion-1[data-disabled],
.emotion-1[data-disabled]:focus,
.emotion-1[data-disabled]:hover {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: none;
}

.emotion-1:hover,
.emotion-1[data-hover] {
  background: #E2E8F0;
}

.emotion-1:hover[disabled],
.emotion-1[data-hover][disabled],
.emotion-1:hover[disabled]:focus,
.emotion-1[data-hover][disabled]:focus,
.emotion-1:hover[disabled]:hover,
.emotion-1[data-hover][disabled]:hover,
.emotion-1:hover[aria-disabled=true],
.emotion-1[data-hover][aria-disabled=true],
.emotion-1:hover[aria-disabled=true]:focus,
.emotion-1[data-hover][aria-disabled=true]:focus,
.emotion-1:hover[aria-disabled=true]:hover,
.emotion-1[data-hover][aria-disabled=true]:hover,
.emotion-1:hover[data-disabled],
.emotion-1[data-hover][data-disabled],
.emotion-1:hover[data-disabled]:focus,
.emotion-1[data-hover][data-disabled]:focus,
.emotion-1:hover[data-disabled]:hover,
.emotion-1[data-hover][data-disabled]:hover {
  background: #EDF2F7;
}

.emotion-1:active,
.emotion-1[data-active] {
  background: #CBD5E0;
}

.emotion-2 {
  margin-right: 0.5rem;
}

.emotion-3 {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
}

.emotion-5 {
  margin-left: 0.5rem;
}

<div
    class="chakra-button__group emotion-0"
    role="group"
  >
    <button
      class="chakra-button emotion-1"
      type="button"
    >
      <span
        class="chakra-button__icon emotion-2"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon emotion-3"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="currentColor"
          >
            <path
              d="M11.114,14.556a1.252,1.252,0,0,0,1.768,0L22.568,4.87a.5.5,0,0,0-.281-.849A1.966,1.966,0,0,0,22,4H2a1.966,1.966,0,0,0-.289.021.5.5,0,0,0-.281.849Z"
            />
            <path
              d="M23.888,5.832a.182.182,0,0,0-.2.039l-6.2,6.2a.251.251,0,0,0,0,.354l5.043,5.043a.75.75,0,1,1-1.06,1.061l-5.043-5.043a.25.25,0,0,0-.354,0l-2.129,2.129a2.75,2.75,0,0,1-3.888,0L7.926,13.488a.251.251,0,0,0-.354,0L2.529,18.531a.75.75,0,0,1-1.06-1.061l5.043-5.043a.251.251,0,0,0,0-.354l-6.2-6.2a.18.18,0,0,0-.2-.039A.182.182,0,0,0,0,6V18a2,2,0,0,0,2,2H22a2,2,0,0,0,2-2V6A.181.181,0,0,0,23.888,5.832Z"
            />
          </g>
        </svg>
      </span>
      Email
    </button>
    <button
      class="chakra-button emotion-1"
      type="button"
    >
      Arrow Forward
      <span
        class="chakra-button__icon emotion-5"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon emotion-3"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`shows spinner and loading text if isLoading and loadingText 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: none;
  width: auto;
  line-height: 1.2;
  border-radius: 0.375rem;
  font-weight: 600;
  height: 2.5rem;
  min-width: 2.5rem;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  background: #EDF2F7;
}

.emotion-0:focus,
.emotion-0[data-focus] {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.emotion-0[disabled],
.emotion-0[disabled]:focus,
.emotion-0[disabled]:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled],
.emotion-0[data-disabled]:focus,
.emotion-0[data-disabled]:hover {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: none;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background: #E2E8F0;
}

.emotion-0:hover[disabled],
.emotion-0[data-hover][disabled],
.emotion-0:hover[disabled]:focus,
.emotion-0[data-hover][disabled]:focus,
.emotion-0:hover[disabled]:hover,
.emotion-0[data-hover][disabled]:hover,
.emotion-0:hover[aria-disabled=true],
.emotion-0[data-hover][aria-disabled=true],
.emotion-0:hover[aria-disabled=true]:focus,
.emotion-0[data-hover][aria-disabled=true]:focus,
.emotion-0:hover[aria-disabled=true]:hover,
.emotion-0[data-hover][aria-disabled=true]:hover,
.emotion-0:hover[data-disabled],
.emotion-0[data-hover][data-disabled],
.emotion-0:hover[data-disabled]:focus,
.emotion-0[data-hover][data-disabled]:focus,
.emotion-0:hover[data-disabled]:hover,
.emotion-0[data-hover][data-disabled]:hover {
  background: #EDF2F7;
}

.emotion-0:active,
.emotion-0[data-active] {
  background: #CBD5E0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin-right: 0.5rem;
  font-size: 1em;
  line-height: normal;
}

.emotion-2 {
  display: inline-block;
  border-color: currentColor;
  border-style: solid;
  border-radius: 99999px;
  border-width: 2px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  color: currentColor;
  -webkit-animation: animation-0 0.45s linear infinite;
  animation: animation-0 0.45s linear infinite;
  width: 1em;
  height: 1em;
}

.emotion-3 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
}

<button
    class="chakra-button emotion-0"
    data-loading=""
    disabled=""
    type="button"
  >
    <div
      class="chakra-button__spinner emotion-1"
    >
      <div
        class="chakra-spinner emotion-2"
      >
        <span
          class="emotion-3"
        >
          Loading...
        </span>
      </div>
    </div>
    Submitting
  </button>
</DocumentFragment>
`;

exports[`shows spinner if isLoading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: none;
  width: auto;
  line-height: 1.2;
  border-radius: 0.375rem;
  font-weight: 600;
  height: 2.5rem;
  min-width: 2.5rem;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  background: #EDF2F7;
}

.emotion-0:focus,
.emotion-0[data-focus] {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.emotion-0[disabled],
.emotion-0[disabled]:focus,
.emotion-0[disabled]:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled],
.emotion-0[data-disabled]:focus,
.emotion-0[data-disabled]:hover {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: none;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background: #E2E8F0;
}

.emotion-0:hover[disabled],
.emotion-0[data-hover][disabled],
.emotion-0:hover[disabled]:focus,
.emotion-0[data-hover][disabled]:focus,
.emotion-0:hover[disabled]:hover,
.emotion-0[data-hover][disabled]:hover,
.emotion-0:hover[aria-disabled=true],
.emotion-0[data-hover][aria-disabled=true],
.emotion-0:hover[aria-disabled=true]:focus,
.emotion-0[data-hover][aria-disabled=true]:focus,
.emotion-0:hover[aria-disabled=true]:hover,
.emotion-0[data-hover][aria-disabled=true]:hover,
.emotion-0:hover[data-disabled],
.emotion-0[data-hover][data-disabled],
.emotion-0:hover[data-disabled]:focus,
.emotion-0[data-hover][data-disabled]:focus,
.emotion-0:hover[data-disabled]:hover,
.emotion-0[data-hover][data-disabled]:hover {
  background: #EDF2F7;
}

.emotion-0:active,
.emotion-0[data-active] {
  background: #CBD5E0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  margin-right: 0;
  font-size: 1em;
  line-height: normal;
}

.emotion-2 {
  display: inline-block;
  border-color: currentColor;
  border-style: solid;
  border-radius: 99999px;
  border-width: 2px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  color: currentColor;
  -webkit-animation: animation-0 0.45s linear infinite;
  animation: animation-0 0.45s linear infinite;
  width: 1em;
  height: 1em;
}

.emotion-3 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
}

.emotion-4 {
  opacity: 0;
}

<button
    class="chakra-button emotion-0"
    data-loading=""
    disabled=""
    type="button"
  >
    <div
      class="chakra-button__spinner emotion-1"
    >
      <div
        class="chakra-spinner emotion-2"
      >
        <span
          class="emotion-3"
        >
          Loading...
        </span>
      </div>
    </div>
    <span
      class="emotion-4"
    >
      Email
    </span>
  </button>
</DocumentFragment>
`;
